Properly align sub-menu position with wrapped items; Fix maxMenuHeight method

--- a/scss/post.scss
+++ b/scss/post.scss
@@ -180,7 +180,6 @@ ul[role="menubar"] {
     }
 
     #main-menu-border {
-        position: relative;
         padding: 10px 0;
         border-bottom: 4px solid $dividergrey;
     }
@@ -214,9 +213,9 @@ ul[role="menubar"] {
 
             border-bottom: 4px solid $dividergrey;
             z-index: 999;
-            padding-top: 14px;
             position: absolute;
             left: 0;
+            top: 100%; /* #main-menu is offset parent */
             width: 100%;
 
             .sub-menu-scroll-container {
